# mesh

./: .gitignore  .gitmodules  CMakeLists.txt
analysis/: utils.py
cmake/: CPM.cmake
src/: .clang-format  gauge.cpp  gauge_action.h  gauge_fixing.h  gaugefix.cpp  generate.cpp  gnuplot.cpp  gnuplot.h  group_histogram.cpp  hmc.cpp  ising.cpp  ising_lattice.cpp  landau.cpp  lattice_gauge.cpp  main.cpp  mesh.h  phi4.cpp  poisson.cpp  random.h  sampler.h  scalar.cpp  sigma.cpp  stats.cpp  stats.h  su2.h  sweep_beta.cpp  test_lattice_gauge.cpp  thermalize.cpp  topology.cpp  u1.h  wilson.cpp  z2.h
src/apps/: benchmark.cpp  hmc.cpp  ising.cpp  ising_correlator.cpp  ompbench.cpp  sigma.cpp  sweep_beta.cpp
src/gauge/: gauge.cpp  gauge.h  groups.h  hmc.cpp  hmc.h  landau.h  markov.cpp  markov.h  utils.h  wilson.cpp  wilson.h
src/groups/: scalar.h  su2.h  su3.h  sun.h  u1.h  z2.h
src/lattice/: device.cpp  device.h  devicebuffer.h  fft.cpp  fft.h  gauge.h  grid.h  hmc.cpp  hmc.h  landau.h  laplace.h  lattice.h  tensor.h
src/lattice/bits/: devicebuffer_cuda.h
src/mesh/: gauge_action.h  gauge_fixing.cpp  gauge_fixing.h  markov.cpp  markov.h  mesh.h  su2.h  topology.cpp  topology.h  u1.h  wilson.cpp  wilson.h  z2.h
src/old/: fft.h  gauge.h  gauge_fixing.h
src/old/mesh/: gauge_action.h  markov.cpp  markov.h  mesh.h  wilson.cpp
src/scalar/: ising.cpp  ising.h  phi4.cpp  phi4.h  scalar.cpp  scalar.h  sigma.cpp  sigma.h
src/tests/: lattice_gauge.cpp
src/util/: fft.h  gnuplot.cpp  gnuplot.h  io.cpp  io.h  lattice.h  numerics.cpp  numerics.h  random.h  sampler.cpp  sampler.h  span.h  stats.cpp  stats.h
